--- a/en.lproj/MBVPortal.xib
+++ b/en.lproj/MBVPortal.xib
@@ -18,14 +18,14 @@
             <rect key="frame" x="0.0" y="0.0" width="260" height="316"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
             <subviews>
-                <box autoresizesSubviews="NO" focusRingType="none" borderWidth="0.0" boxType="custom" borderType="none" titlePosition="noTitle" id="2" userLabel="portalBox">
+                <box autoresizesSubviews="NO" focusRingType="none" borderWidth="0.0" title="Portal" boxType="custom" borderType="none" titlePosition="noTitle" id="2" userLabel="portalBox">
                     <rect key="frame" x="0.0" y="0.0" width="260" height="316"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                     <view key="contentView">
                         <rect key="frame" x="0.0" y="0.0" width="260" height="316"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <box autoresizesSubviews="NO" title="Box" boxType="custom" borderType="line" titlePosition="noTitle" id="243" userLabel="Box - Header">
+                            <box autoresizesSubviews="NO" title="Header" boxType="custom" borderType="line" titlePosition="noTitle" id="243" userLabel="Box - Header">
                                 <rect key="frame" x="0.0" y="274" width="260" height="42"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <view key="contentView">
@@ -39,7 +39,9 @@
                                                 <font key="font" metaFont="cellTitle"/>
                                                 <color key="textColor" name="controlShadowColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="controlHighlightColor" catalog="System" colorSpace="catalog"/>
+                                                <accessibility help="Name"/>
                                             </textFieldCell>
+                                            <accessibility help="Portal Name"/>
                                             <connections>
                                                 <binding destination="-2" name="value" keyPath="representedObject.name" id="65"/>
                                             </connections>
@@ -52,6 +54,7 @@
                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             </searchFieldCell>
+                                            <accessibility description="Enter text to search" help="Search box"/>
                                             <connections>
                                                 <binding destination="-2" name="predicate" keyPath="searchPredicate" id="134">
                                                     <dictionary key="options">
@@ -80,7 +83,7 @@
                                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                 <font key="font" metaFont="system"/>
                                             </buttonCell>
-                                            <accessibility description="Increase view detail"/>
+                                            <accessibility description="Increase view detail" help="Increase view detail"/>
                                             <connections>
                                                 <action selector="growTableRows:" target="-2" id="251"/>
                                             </connections>
@@ -92,7 +95,7 @@
                                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                 <font key="font" metaFont="system"/>
                                             </buttonCell>
-                                            <accessibility description="Decrease view detail"/>
+                                            <accessibility description="Decrease view detail" help="Decrease view detail"/>
                                             <connections>
                                                 <action selector="shrinkTableRows:" target="-2" id="252"/>
                                             </connections>
@@ -101,6 +104,7 @@
                                 </view>
                                 <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                                 <color key="fillColor" name="controlHighlightColor" catalog="System" colorSpace="catalog"/>
+                                <accessibility help="Portal header"/>
                                 <connections>
                                     <binding destination="-2" name="transparent" keyPath="selected" id="247">
                                         <dictionary key="options">
@@ -145,6 +149,7 @@
                                                                     <rect key="frame" x="0.0" y="54" width="12" height="12"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="MBUnreadEmail" id="286"/>
+                                                                    <accessibility help="Read/Unread Status icon"/>
                                                                     <connections>
                                                                         <binding destination="209" name="hidden" keyPath="objectValue.isSeenFlag" id="P7y-e4-5c7">
                                                                             <dictionary key="options">
@@ -157,6 +162,7 @@
                                                                     <rect key="frame" x="0.0" y="38" width="12" height="12"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="MBFlaggedEmail" id="rPh-ke-J8Q"/>
+                                                                    <accessibility help="Flagged status icon"/>
                                                                     <connections>
                                                                         <binding destination="209" name="hidden" keyPath="objectValue.isFlaggedFlag" id="wiq-jK-BsR">
                                                                             <dictionary key="options">
@@ -170,6 +176,7 @@
                                                                     <rect key="frame" x="0.0" y="22" width="12" height="12"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="290"/>
+                                                                    <accessibility help="Attachment icon"/>
                                                                 </imageView>
                                                                 <textField identifier="addressFrom" verticalHuggingPriority="750" id="227">
                                                                     <rect key="frame" x="12" y="53" width="179" height="17"/>
@@ -179,13 +186,14 @@
                                                                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
+                                                                    <accessibility help="From"/>
                                                                     <connections>
                                                                         <binding destination="209" name="value" keyPath="objectValue.addressFrom" id="bHK-Oc-WLx">
                                                                             <dictionary key="options">
-                                                                                <string key="NSValueTransformerName">MBSimpleRFC822AddressToStringTransformer</string>
+                                                                                <bool key="NSContinuouslyUpdatesValue" value="YES"/>
                                                                                 <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
                                                                                 <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
-                                                                                <bool key="NSContinuouslyUpdatesValue" value="YES"/>
+                                                                                <string key="NSValueTransformerName">MBSimpleRFC822AddressToStringTransformer</string>
                                                                             </dictionary>
                                                                         </binding>
                                                                     </connections>
@@ -199,6 +207,7 @@
                                                                         <color key="textColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
+                                                                    <accessibility help="Date Sent"/>
                                                                     <connections>
                                                                         <binding destination="209" name="value" keyPath="objectValue.dateSent" id="269">
                                                                             <dictionary key="options">
@@ -216,6 +225,7 @@
                                                                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
+                                                                    <accessibility help="Subject"/>
                                                                     <connections>
                                                                         <binding destination="209" name="value" keyPath="objectValue.subject" id="4vA-W3-ViX">
                                                                             <dictionary key="options">
@@ -234,6 +244,7 @@
                                                                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
+                                                                    <accessibility help="Content summary"/>
                                                                     <connections>
                                                                         <binding destination="209" name="value" keyPath="objectValue.summary" id="273">
                                                                             <dictionary key="options">
@@ -244,6 +255,7 @@
                                                                     </connections>
                                                                 </textField>
                                                             </subviews>
+                                                            <accessibility help="Message summary"/>
                                                             <connections>
                                                                 <outlet property="textField" destination="210" id="212"/>
                                                             </connections>
@@ -267,13 +279,16 @@
                                     <rect key="frame" x="224" y="17" width="15" height="102"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
+                                <accessibility help="Messages"/>
                             </scrollView>
                         </subviews>
                     </view>
                     <color key="borderColor" name="textColor" catalog="System" colorSpace="catalog"/>
                     <color key="fillColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    <accessibility help="A Portal"/>
                 </box>
             </subviews>
+            <accessibility help="A Portal"/>
             <connections>
                 <outlet property="menu" destination="259" id="263"/>
             </connections>
