--- a/en.lproj/MBVPortalViewController.xib
+++ b/en.lproj/MBVPortalViewController.xib
@@ -14,18 +14,18 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView focusRingType="none" id="1" userLabel="Portal View">
+        <customView wantsLayer="YES" focusRingType="none" id="1" userLabel="Portal View">
             <rect key="frame" x="0.0" y="0.0" width="260" height="316"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
             <subviews>
-                <box autoresizesSubviews="NO" focusRingType="none" borderWidth="0.0" title="Portal" boxType="custom" borderType="none" titlePosition="noTitle" id="2" userLabel="portalBox">
+                <box autoresizesSubviews="NO" wantsLayer="YES" focusRingType="none" borderWidth="0.0" title="Portal" boxType="custom" borderType="none" titlePosition="noTitle" id="2" userLabel="portalBox">
                     <rect key="frame" x="0.0" y="0.0" width="260" height="316"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                     <view key="contentView">
                         <rect key="frame" x="0.0" y="0.0" width="260" height="316"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <box autoresizesSubviews="NO" title="Header" boxType="custom" borderType="line" titlePosition="noTitle" id="243" userLabel="Box - Header">
+                            <box autoresizesSubviews="NO" wantsLayer="YES" title="Header" boxType="custom" borderType="line" titlePosition="noTitle" id="243" userLabel="Box - Header">
                                 <rect key="frame" x="0.0" y="274" width="260" height="42"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <view key="contentView">
@@ -113,7 +113,7 @@
                                     </binding>
                                 </connections>
                             </box>
-                            <scrollView focusRingType="none" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="200">
+                            <scrollView wantsLayer="YES" focusRingType="none" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="200">
                                 <rect key="frame" x="0.0" y="0.0" width="260" height="274"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="Xel-8u-QIZ">
@@ -141,7 +141,7 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES"/>
                                                     <prototypeCellViews>
-                                                        <tableCellView id="209">
+                                                        <tableCellView wantsLayer="YES" id="209">
                                                             <rect key="frame" x="1" y="1" width="255" height="70"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
@@ -190,10 +190,10 @@
                                                                     <connections>
                                                                         <binding destination="209" name="value" keyPath="objectValue.addressFrom" id="bHK-Oc-WLx">
                                                                             <dictionary key="options">
-                                                                                <string key="NSValueTransformerName">MBSimpleRFC822AddressToStringTransformer</string>
+                                                                                <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
                                                                                 <bool key="NSContinuouslyUpdatesValue" value="YES"/>
                                                                                 <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
-                                                                                <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
+                                                                                <string key="NSValueTransformerName">MBSimpleRFC822AddressToStringTransformer</string>
                                                                             </dictionary>
                                                                         </binding>
                                                                     </connections>
