--- a/en.lproj/MBMessageOutlineViewController.xib
+++ b/en.lproj/MBMessageOutlineViewController.xib
@@ -14,24 +14,24 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView horizontalHuggingPriority="666" verticalHuggingPriority="701" horizontalCompressionResistancePriority="401" verticalCompressionResistancePriority="421" translatesAutoresizingMaskIntoConstraints="NO" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="368" height="169"/>
+            <rect key="frame" x="0.0" y="0.0" width="450" height="169"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <scrollView horizontalHuggingPriority="727" verticalHuggingPriority="749" horizontalCompressionResistancePriority="293" verticalCompressionResistancePriority="306" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQP-21-CuW">
-                    <rect key="frame" x="0.0" y="0.0" width="368" height="169"/>
+                <scrollView horizontalHuggingPriority="727" verticalHuggingPriority="749" horizontalCompressionResistancePriority="293" verticalCompressionResistancePriority="306" misplaced="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQP-21-CuW">
+                    <rect key="frame" x="0.0" y="0.0" width="449" height="169"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <clipView key="contentView" horizontalHuggingPriority="712" verticalHuggingPriority="738" horizontalCompressionResistancePriority="746" verticalCompressionResistancePriority="308" id="8F8-Yt-CPh">
-                        <rect key="frame" x="1" y="17" width="366" height="151"/>
+                    <clipView key="contentView" horizontalHuggingPriority="712" verticalHuggingPriority="738" horizontalCompressionResistancePriority="746" verticalCompressionResistancePriority="308" misplaced="YES" id="8F8-Yt-CPh">
+                        <rect key="frame" x="1" y="17" width="447" height="151"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <outlineView horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="363" verticalCompressionResistancePriority="376" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" headerView="eS5-sW-ewi" indentationPerLevel="16" autoresizesOutlineColumn="YES" outlineTableColumn="2fv-A6-H6z" id="M46-cS-F51">
-                                <rect key="frame" x="0.0" y="0.0" width="366" height="151"/>
+                                <rect key="frame" x="0.0" y="0.0" width="447" height="151"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" red="0.40000000596046448" green="0.80000001192092896" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
-                                    <tableColumn identifier="mimeType" editable="NO" width="91" minWidth="40" maxWidth="1000" id="2fv-A6-H6z">
+                                    <tableColumn identifier="mimeType" editable="NO" width="111" minWidth="40" maxWidth="1000" id="2fv-A6-H6z">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Type">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -44,7 +44,7 @@
                                         </textFieldCell>
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                     </tableColumn>
-                                    <tableColumn identifier="mimeSubtype" editable="NO" width="90" minWidth="10" maxWidth="3.4028234663852886e+38" id="V6o-7h-mHy">
+                                    <tableColumn identifier="mimeSubtype" editable="NO" width="97" minWidth="10" maxWidth="3.4028234663852886e+38" id="V6o-7h-mHy">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Subtype">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -57,7 +57,7 @@
                                         </textFieldCell>
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                     </tableColumn>
-                                    <tableColumn identifier="mimeName" editable="NO" width="101" minWidth="16" maxWidth="1000" id="aDq-CA-pQ6">
+                                    <tableColumn identifier="mimeName" editable="NO" width="107" minWidth="16" maxWidth="1000" id="aDq-CA-pQ6">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Name">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -104,7 +104,7 @@
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
                     <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" id="Ae8-NM-eg4">
-                        <rect key="frame" x="1" y="327" width="0.0" height="16"/>
+                        <rect key="frame" x="1" y="120" width="359" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" id="eVN-1t-AkW">
@@ -112,7 +112,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <tableHeaderView key="headerView" horizontalHuggingPriority="720" verticalHuggingPriority="734" horizontalCompressionResistancePriority="230" verticalCompressionResistancePriority="204" id="eS5-sW-ewi">
-                        <rect key="frame" x="0.0" y="0.0" width="366" height="17"/>
+                        <rect key="frame" x="0.0" y="0.0" width="447" height="17"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </tableHeaderView>
                 </scrollView>
